fix: copyright break in RWD

--- a/index.sass
+++ b/index.sass
@@ -43,7 +43,7 @@ header,main,footer,.copyright
 
 header
     h1
-        padding: 16px 0
+        padding: 14px 0
         text-align: center
         background-color: #fff
     img
@@ -231,8 +231,15 @@ footer.row
         color: #306515
 
 .copyright
+    padding: 7px
     font-size: 13px
-    line-height: 32px
     text-align: center
     color: #F8FAF7
     background-color: #306515
+.reserved
+    padding-left: 4px
+    border-left: solid 2px #F8FAF7
+    @include rwd-sm
+        display: block
+        padding: 0
+        border: none
